# load-test

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.offline  LocalTesting.md  Makefile  README.md  lkr.md  pyproject.toml  test_offline.sh
.github/workflows/: main.yaml  release.yaml
context/: cookieless-embed-docs.md
lkr/: main.py
lkr/load_test/: locustfile_conversational_analytics_api.py  locustfile_cookieless_embed.py  locustfile_cookieless_embed_conversational_analytics.py  locustfile_cookieless_embed_dashboard.py  locustfile_dashboard.py  locustfile_dashboard_queries.py  locustfile_qid.py  locustfile_render.py  test_utils.py  utils.py
lkr/load_test/embed_cookieless/: embed_container.html  embed_server.py
lkr/load_test/embed_cookieless_conversational_analytics/: embed_container.html  embed_server.py
lkr/load_test/embed_cookieless_dashboard/: embed_container.html  embed_server.py
lkr/load_test/embed_dashboard_observability/: embed_container.html  embed_server.py  events.py  main.py
lkr/utils/: validate_api.py  version.py
