[project]
name = "lkr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "locust>=2.32.9",
    "looker-sdk>=25.2.0",
    "pydantic>=2.11.3",
    "python-dotenv>=1.0.1",
    "selenium>=4.28.1",
    "structlog>=25.2.0",
    "typer>=0.15.1",
]


[tool.uv]
package = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.4",
]


[project.scripts]
lkr = "lkr.main:app"
